# trellis

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  MASTERPLAN.md  README.md  SECURITY.md  TIERS.md  WORKPLAN.md  cli.mjs  docker-compose.mem0.yml  docker-compose.phoenix.yml  init.sh  package-lock.json  package.json  pyproject.toml  vitest.config.ts
.agents/handoffs/: registry.yaml
.bounds/: root.yaml
.claude/: settings.json
.claude/commands/: speckit.verify.md
.claude/skills/: api-routes  db-migrations  docs-maintenance  frontend-ui  ponytail-review  quality-gates  sdd  security-review  skill-evolution
.codex/: hooks.json
.github/: copilot-instructions.md
.github/agents/: api-routes.agent.md  db-migrations.agent.md  docs-maintenance.agent.md  speckit.checklist.agent.md  (+3 more)
.trellis/: cli.mjs  config.json  generated-skills.json  init.sh
docs/: AI-SETUP.md  DESIGN.md  README-FOR-AGENTS.md  README.md  STRUCTURE.md  SYSTEM.md  _subsystem-template.md  adopting-existing-projects.md  coding-standards.md  contributing.md  credits.md  evals.md  evolution.md  language-support.md  manual-setup.md  metrics.md  ponytail-setup.md  repository-mapping.md  self-hosted-services.md  skills.md
scripts/: adapt-to-project.mjs  agnostic-allowlist.json  check-agnostic.mjs  check-doc-breadcrumbs.mjs  check-migration-safety.mjs  check-skill-sync.mjs  docs-sync.mjs  generate-skills.mjs  golden-tests.mjs  handoff-engine.mjs  migration-adapters.json  run-evals.mjs  services.mjs  wizard.mjs
templates/: README.md
(+145 files in other folders)
